# semver-taggr

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml
src/: elements.rs  functions.rs  main.rs
