[package]
name = "taggr"
authors = ["Sebastian Müller"]
version = "0.1.0"
description = "CLI to manage your semantic version git tags"
repository = "https://github.com/sbmueller/semver-taggr"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
