[package]
name = "taggr"
authors = ["Sebastian Müller"]
version = "0.1.0"
description = "CLI to manage your semantic version git tags"
repository = "https://github.com/sbmueller/semver-taggr"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
git2 = "0.17.2"
inquire = "0.6.2"
log = "0.4.20"
regex = "1.9.3"
simple_logger = "4.2.0"
